--- a/src/com/milkyway/GUI/TheThanhVienJPanel.form
+++ b/src/com/milkyway/GUI/TheThanhVienJPanel.form
@@ -878,6 +878,9 @@
                           <Image iconType="3" name="/com/milkyway/Icons/Alarm.png"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Gia h&#x1ea1;n"/>
+                        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                          <Color id="Hand Cursor"/>
+                        </Property>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGiaHanActionPerformed"/>
